# projectwr

./: .gitignore  .npmrc  README.md  index.html  jsconfig.json  package-lock.json  package.json  plan.md  postcss.config.js  tailwind.config.js  vite.config.js
src/: App.jsx  index.css  main.jsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: default_settings.json
src-tauri/src/: lib.rs  libs.rs
src-tauri/src/libs/: argument.rs  auth.rs  filehelper.rs  response.rs  tauri_actions.rs
src/assets/: harper_wasm_bg.wasm
src/components/ui/: menu.jsx
src/config/: credentials.js  settings.js
src/modules/app/ConfigProviders/: DeviceTypeProvider.jsx  SizingThemeProvider.jsx  ThemeProvider.jsx  UseSizing.jsx
src/modules/app/components/: WritingApp.jsx  WritingAppBackup.jsx
src/modules/app/hooks/: useComputedCssVar.jsx  useFonts.jsx  useFullscreenStatus.jsx  useImages.jsx  useItemEntriesMap.jsx  useLibrariesMap.jsx  useLocalStore.jsx  useMainPanel.jsx  useRefreshableTimer.jsx  useStoreHistory.jsx  useTemplates.jsx  useYMap.jsx  useYMapDeep.jsx  useZoom.jsx
src/modules/app/lib/: Firebase.js  ObservableMap.js  data.js  dataSubDoc.js  dictionary.js  font.js  image.js  importExport.js  itemLocalState.js  libraries.js  persistenceSubDocs.js  (+7 more)
src/modules/design-system/: GrainyButton.jsx  GrainyDiv.jsx  GrainyElement.jsx  LibraryManagerButton.jsx  StartMenuButton.jsx  WritingAppButton.jsx  dynamicSizeElement.jsx  dynamicSizeInputElement.jsx  useOuterClick.jsx
src/modules/editor/: enDictionary.js  lorem.js
(+110 files in other folders)
